Makeing smoke installer code public so it can be trusted.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Ludum"
+name = "Smoke_Installer"
 version = "0.1.0-beta"
 authors = ["Nathan McMillan54 <nathanmcmillan54@gmail.com>"]
 edition = "2018"
